# FF_Claude_SDK_Agent

./: ### What is the Claude Agent SDK?.md  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_DOCUMENTATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONVEX_DEPLOYMENT_SUMMARY.md  CONVEX_SYNC_REQUIREMENTS.md  EXTERNAL_AGENT_QUICK_REF.txt  FIBREFLOW_COMPLETE_SUMMARY.md  HARNESS_STATUS.txt  JULES_LEVEL_4_ACHIEVED.md  MCP_CONFIGURATION_SUMMARY.md  MCP_INSTALLATION_COMPLETE.md  NEON_AGENT_UI_RECOMMENDATIONS.md  PHASE2_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_SPEC.md  README.md  REORGANIZATION_SUMMARY.md  SKILL_INTEGRATION_PLAN.md  TECHNICAL_DEBT_REGISTER.md  TEST_VALIDATION_REPORT.md  TRANSFORMATION_COMPLETE.md  WA_DR_QUICKSTART.md  WA_FEEDBACK_FIX_DEPLOYMENT.md  WA_MONITOR_SETUP.md  WHERE_WE_LEFT_OFF.md  claude_progress.md  export_all_sheets_json.py  feature_list.json  find_sharepoint_file.py  orchestrator_api.py  pyproject.toml  pytest.ini  read_sharepoint_file.py  requirements_superior_brain.txt  (+4 more)
.claude/: .gitignore  approved-commands.yaml  config.yaml  learnings.md  mcp-config-example.json  mcp-profiles.md  settings.local.json.backup  settings.template.json  verify.sh
.claude/commands/deployment/: deploy.md  health.md
.claude/modules/: _index.yaml  _ownership.yaml  wa-monitor.md
.claude/skills/fibreflow/: INCIDENT_LOG.md
.claude/skills/fibreflow/scripts/: quick_fix.py
.claude/skills/git-operations/: TEST_RESULTS.md
.claude/skills/git-operations/scripts/: deploy.py
.claude/skills/port-manager/scripts/: check_port.py
.claude/skills/qfieldcloud/: INCIDENT_LOG.md  skill.md
.claude/skills/qfieldcloud/scripts/: deploy.py  logs.py  status.py
.claude/skills/vf-server/: README.md  skill.md
agents/knowledge_base/: README.md  agent.py  apps_config.json  server_config.json
agents/vps-monitor/: README.md  config.json
deploy/: NGINX_IMPROVEMENTS.md  brain_api.py  deploy_brain.sh  fibreflow-proactive.service  nginx-enhanced.conf  nginx_monitoring_cheatsheet.md  requirements_brain.txt  setup_github.sh  upgrade_nginx.sh
deployment/: README.md
docs/: DECISION_LOG.md  EXTERNAL_AGENT_ACCESS_GUIDE.md  OPERATIONS_LOG.md  UI_INTEGRATION_GUIDE.md
docs/archive/: AGENT_EXPANSION_SUMMARY.md  CLAUDE_CODE_OPTIMIZATION_ROADMAP.md  CLAUDE_CODE_VS_AGENT_SDK.md  COMPLETE_BRAIN_ARCHITECTURE.md  COMPLETE_FRAMEWORK_SUMMARY.md  DEBT_003_FIX_SUMMARY.md  DEBT_FIX_SUMMARY.md  DOCUMENT_INTEGRATION_GUIDE.md  DOMAIN_MEMORY_IMPLEMENTATION_SUMMARY.md  HARNESS_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_RESULTS.md  MASTER_INDEX.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SPEC.md  PROACTIVE_SYSTEM_SUMMARY.md  QFIELD_URGENT_FIX.md  SKILLS_ARCHITECTURE_DECISION.md  SUPERIOR_BRAIN_SETUP.md  TECHNICAL_DEBT_CLEANUP_COMPLETE.md  UNIVERSAL_AGENT_SUMMARY.md  VF_AGENT_WORKFORCE.md  VF_SERVER_ACCESS_REQUEST.md  WEEK2_TECH_DEBT_ANALYSIS.md  WEEK3_TEST_IMPLEMENTATION_SUMMARY.md  bugs.md  claude_old.md  progress.md
evaluations/: 2025-10-21-indie-devdan-agentic-coding-transcript.md  2025-11-26-claude-code-800-hours-video.md
experiments/skills-vs-agents/skills-based/database-operations/: skill.md
harness/: runner.py
harness/prompts/: coding_agent.md  initializer.md
harness/runs/: latest
harness/runs/knowledge_base_20251222_151224/: claude_progress.md  feature_list.json
harness/runs/knowledge_base_20251222_151224/agents/knowledge_base/: agent.py
harness/runs/knowledge_base_20251222_151224/tests/: test_knowledge_base_agent.py
legacy/: agent_example.py
logs/: worker_stats.json
memory/: commit_metrics.db  feedback.db  workload.db
metrics/: collector.py
orchestrator/: orchestrator.py  registry.json
requirements/: base.txt
shared/: base_agent.py
skills/context-engineering/: SKILL.md  compaction-guide.md  memory-workflows.md  structured-notes.md
skills/source-validation/: SKILL.md  bias-detection.md  decision-matrix.md  source-hierarchy.md  validation-checklist.md
tests/: test_knowledge_base.py  test_knowledge_base_agent.py
tests/integration/: test_universal_functions.py
ui-module/: .env.backend.example  .env.example  .env.frontend.example  CommandPalette.tsx  DASHBOARD_INTEGRATION_GUIDE.md  DEPLOY_NOW.md  FibreFlowDashboard.tsx  HOSTINGER_DEPLOYMENT.md  INTEGRATION_GUIDE.md  Procfile  QUICK_FIX.md  README.md  START_UNIFIED_UI.md  TEST_UI.md  VPS_DETAILS.md  agent_api.py  chat.html  dual_agent.py  enhanced_chat.html  fibreflow-dashboard-api.py  hostinger-deploy.sh  orchestrated_agent_api.py  orchestrated_chat.html  railway.json  requirements.txt  route.ts  start_ui.sh  unified_agent_api.py  unified_chat.html
wa_monitor_deployment/: DEPLOYMENT_GUIDE.md  FotoReviewsDashboard.tsx  README.md  api_evaluations_route.ts  deploy.sh
